# yueda-ai-workflow-kit

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: local-workbench-ci.yml
docs/: FocusFerry_Architecture_Baseline.md  faq.md  local-commerce-content-delivery-acceptance-criteria.md  local-commerce-content-delivery-implementation-plan.md  local-commerce-content-delivery-workbench.md  local-workbench-v1-implementation-status.md  repo-update-snippets.md  roadmap.md
docs/codex-tasks/: local-workbench-v1.md
examples/: use-cases.md
local_commerce_workbench/: __init__.py  cli.py
products/demo-plugin-001/: product.yaml
products/demo-plugin-001/data/: demo_codes.csv
skills/business-problem-diagnosis/: SKILL.md
skills/business-problem-diagnosis/examples/: input.md  output-outline.md
skills/local-commerce-content-delivery-workbench/: SKILL.md
skills/local-commerce-content-delivery-workbench/examples/: input.md  output-outline.md
skills/official-account-package/: SKILL.md
skills/official-account-package/examples/: input.md  output-outline.md
templates/: contact-form-frontend.html  skill-template.md
tests/: test_local_commerce_workbench.py
voice-hermes-bridge/: .env.example  .gitignore  HANDOFF.md  README.md  download_models.py  requirements.txt  voice_bridge.py
