[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-commerce-workbench"
version = "0.1.0"
description = "Local content and delivery workbench for solo commerce workflows."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0", "Pillow>=10.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
local-commerce-workbench = "local_commerce_workbench.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
